# openvocab-4D

./: .gitignore  PIPELINE_PLAN.md  README.md  RESEARCH.md  app.py  install.ps1  install.sh  pyproject.toml  reconstruct.py
.jules/: bolt.md
docs/: ARCHITECTURE.md  USAGE.md
trackA/: eval_colmap.py  milestone1_vggt_stills.py  milestone2_sam3_concepts.py  milestone3_fuse.py  milestone4_video.py  render_scene.py
